correct center align behavior of pagination component when not present as a child of a grid area

--- a/src/css/vocabulary-refactor.css
+++ b/src/css/vocabulary-refactor.css
@@ -370,6 +370,7 @@ nav.pagination {
 nav.pagination ol {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
     margin: 0;
     padding: 0;
